# learnhaskell

./: README.md  learnhaskell.cabal
src/: CIS194.hs
src/CIS194/: Homework01.hs  README.md
test/: doctests.hs
