name:                learnhaskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/elasticdog/learnhaskell#readme
license:             ISC
license-file:        LICENSE
author:              Aaron Bull Schaefer
maintainer:          aaron@elasticdog.com
copyright:           Copyright (c) 2016 Aaron Bull Schaefer
category:            Education
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CIS194
                     , CIS194.Homework01
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctests.hs
  build-depends:       base
                     , doctest
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elasticdog/learnhaskell
